<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical">
    
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_number_of_palantiri"/>
       <EditText
          android:id="@+id/edittext_number_of_palantiri" 
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:hint="@string/edittext_hint_palantiri"/>
     </LinearLayout> 

     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_number_of_beings"/>
       <EditText 
          android:id="@+id/edittext_number_of_beings"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:hint="@string/edittext_hint_beings"/>
     </LinearLayout>

     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_lease_duration"/>
       <EditText 
          android:id="@+id/edittext_lease_duration"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:hint="@string/edittext_hint_duration"/>
     </LinearLayout>

     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/label_gazing_iterations"/>
       <EditText
          android:id="@+id/edittext_gazing_iterations"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          android:hint="@string/edittext_hint_iterations"/>
     </LinearLayout>

  <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 	
    <Button
       android:id="@+id/button_simulation"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/button_start_simulation"
       android:onClick="simulationButtonPressed"/>
  </LinearLayout>
</LinearLayout>
